Fix the line height and spacing throughout CSS file

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html {
-box-sizing:border-box;
+  box-sizing: border-box;
 }
 
 *, *::before, *::after {
@@ -8,7 +8,7 @@ box-sizing:border-box;
 
 body {
   margin: 0;
-  line-height: 1.5;
+  line-height: 1.4;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -25,19 +25,26 @@ body {
 
 .text {
   position: absolute;
-  width: 100;
-
-  bottom: 1.9em;
+  transform: translate(-49%, .9%);
+  bottom: 2.2em;
   right: auto;
-  left: 50%;
+  left: 53%;
   max-width: 50em;
+  width: 100%;
 }
 
-.text h2 {
+h2 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
   font-size: 4rem;
   margin: 0 0 .3em;
+  font-style: normal;
   color: #fff;
-  font-weight: bold;
+}
+
+span {
+  font-family: "Open Sans", sans-serif;
+  background-color: rgba(0, 0, 0, .5);
 }
 
 .text p {
